# StructureTool

./: Build.bat  CMakeLists.txt  MinecraftTool.sln
MinecraftTool/: MinecraftTool.cpp  MinecraftTool.vcxproj  MinecraftTool.vcxproj.filters  StructureLoader.cpp  StructureLoader.h
MinecraftTool/Data/: scene.json  structure.json
StructureTool/: CMakeLists.txt  MinecraftTool.cpp  Structure.h  StructureLoader.cpp  StructureLoader.h
